--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -1,5 +1,8 @@
-<div style="text-align: center">
-  <h1>
-    {{title}}!
-  </h1>
+<div class="stock-container">
+  <div class="name">
+    <h3>{{name}}</h3> - <h4>({{code}})</h4>
+  </div>
+  <div class="price">
+    $ {{price}}
+  </div>
 </div>
