--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -2,7 +2,7 @@
   <div class="name">
     {{name}} - ({{code}})
   </div>
-  <div class="price" [class]="positiveChang?'positive':'negativee'">
+  <div class="price" [class]="positiveChang?'positive':'negative'">
     $ {{price}}
   </div>
 </div>
