--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -1,8 +1,11 @@
 <div class="stock-container">
   <div class="name">
-    {{name}} - ({{code}})
+    {{stock.name}} - ({{stock.code}})
   </div>
-  <div class="price" [class]="positiveChang?'positive':'negative'">
-    $ {{price}}
+  <div class="price" [class]="stock.isPositiveChange()?'positive':'negative'">
+    $ {{stock.price}}
   </div>
+  <button (click)="toggleFavorite($event)" [disabled]="stock.favorite">
+    Add to Favorite
+  </button>
 </div>
