--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -2,7 +2,7 @@
   <div class="name">
     {{stock.name}} - ({{stock.code}})
   </div>
-  <div class="price" [class]="stock.isPositiveChange()?'positive':'negative'">
+  <div class="price" [ngClass]="stockClasses">
     $ {{stock.price}}
   </div>
   <button (click)="toggleFavorite($event)" [disabled]="stock.favorite">
