--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -1,14 +1,12 @@
-<div class="stock-container">
+<div class="stock-container" *ngFor="let stock of stocks; index as i">
   <div class="name">
     {{stock.name}} - ({{stock.code}})
   </div>
-  <!--
-  <div class="price" [ngClass]="stockClasses">
-  -->
-  <div class="price" [ngStyle]="stockStyles">
+  <div class="price" [class]="stock.isPositiveChange()? 'positive' : 'negative'">
     $ {{stock.price}}
   </div>
-  <button (click)="toggleFavorite($event)" [disabled]="stock.favorite">
+  <button (click)="toggleFavorite($event, i)" [disabled]="stock.favorite" *ngIf="!stock.favorite">
     Add to Favorite
   </button>
+  <br>
 </div>
