--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -1,6 +1,6 @@
-<div class="stock-container" *ngFor="let stock of stocks; index as i">
+<div class="stock-container" *ngFor="let stock of stocks; index as i; trackBy: trackStockByCode">
   <div class="name">
-    {{stock.name}} - ({{stock.code}})
+    {{stock.name + ' (' + stock.code + ') '}}
   </div>
   <div class="price" [class]="stock.isPositiveChange()? 'positive' : 'negative'">
     $ {{stock.price}}
