--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div style="text-align:center">
   <h2>
-    Welcome to {{ title }}!
+    {{ title }}!
   </h2>
-  <app-stock-item></app-stock-item>
+  <app-stock-item [stock]="stockObj"></app-stock-item>
 </div>
