--- a/src/app/stock/stock-item/stock-item.component.html
+++ b/src/app/stock/stock-item/stock-item.component.html
@@ -8,5 +8,8 @@
   <button (click)="onToggleFavorite($event)" *ngIf="!stock.favorite">
     Add to Favorite
   </button>
+  <button (click)="changeStockPrice()">
+    Add Price
+  </button>
   <br>
 </div>
